--- a/com.animalfriends/pom.xml
+++ b/com.animalfriends/pom.xml
@@ -62,6 +62,14 @@
 			<artifactId>jersey-media-moxy</artifactId>
 			<version>2.15</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 
 
